--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  cloud_firestore: ^5.6.7
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.3
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +59,16 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - asset/image/   # This includes all files under this folder, but not subfolders
 
+  fonts:
+    - family: Engagement
+      fonts:
+        - asset: asset/font/Engagement-Regular.ttf
+    - family: Crimson
+      fonts:
+        - asset: asset/font/CrimsonPro-VariableFont_wght.ttf
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
