--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,13 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  crypto: ^3.0.0
-
   flutter:
     sdk: flutter
 
-
+  # Use current Stream packages that support null safety
+  stream_chat_flutter: ^6.5.0
+  stream_chat_flutter_core: ^6.5.0
+  stream_chat: ^6.5.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
