--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   cloud_firestore: ^5.6.7
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.3
+  url_launcher: ^6.2.5
 
 dev_dependencies:
   flutter_test:
