--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   permission_handler: ^11.3.1
   http: ^0.13.6
   image_picker: ^1.0.4
+  shared_preferences: ^2.2.2
+  rxdart: ^0.27.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
