--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   shared_preferences: ^2.2.2
   rxdart: ^0.27.7
   fl_chart: ^0.64.0
+  image_picker_for_web: ^3.0.1
+  universal_html: ^2.2.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
